<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.app.mybank.ui.home.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/MyThemeOverlay_Toolbar" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/pix_16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/balance_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="3dp"
                    app:cardCornerRadius="@dimen/pix_8dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/pix_8dp">

                        <TextView
                            style="@style/text_bold"
                            android:layout_marginBottom="@dimen/pix_2dp"
                            android:text="@string/label_you_have" />

                        <TextView
                            style="@style/text_bold"
                            android:layout_marginBottom="@dimen/pix_4dp"
                            android:text="@{vm.balanceText}"
                            android:textSize="@dimen/font_xlarge" />

                        <TextView
                            style="@style/text_grey"
                            android:layout_marginBottom="@dimen/pix_2dp"
                            android:text="@string/label_account_no" />

                        <TextView
                            style="@style/text_bold"
                            android:layout_marginBottom="@dimen/pix_4dp"
                            android:text="@{vm.accountNo}"
                            android:textSize="@dimen/font_large" />


                        <TextView
                            style="@style/text_grey"
                            android:layout_marginBottom="@dimen/pix_2dp"
                            android:text="@string/label_account_holder" />

                        <TextView
                            style="@style/text_bold"
                            android:layout_marginBottom="@dimen/pix_4dp"
                            android:text="@{vm.accountHolder}"
                            android:textSize="@dimen/font_large" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_history_section_header"
                    style="@style/text_bold"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/pix_8dp"
                    android:layout_marginBottom="@dimen/pix_2dp"
                    android:text="@string/label_txn_history"
                    android:textSize="@dimen/font_large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/balance_container" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvlist"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:paddingBottom="@dimen/pix_16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@id/tv_transfer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_history_section_header" />

                <TextView
                    android:id="@+id/tv_transfer"
                    style="@style/btn_style"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:onClick="openTransfer"
                    android:text="@string/m_transfer"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                layout="@layout/loader_container"
                app:showError="@{vm.showError}"
                app:showLoader="@{vm.showLoader}"
                app:text="@{vm.showErrorText}" />
        </FrameLayout>
    </LinearLayout>
</layout>